# NVTX

./: README.md
.github/workflows/: c-cpp.yml  cibw.yml  test.yml
c/include/nvtx3/: nvToolsExt.h
c/include/nvtx3/nvtxDetail/: nvtxInit.h
docs/doxygen/: _p_a_g_e__s_y_n_c_h_r_o_n_i_z_a_t_i_o_n.html  annotated.html  classes.html  dir_48b95086e7eb28d79ef283b47c5fa0c6.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  group___d_o_m_a_i_n_s.html  group___e_v_e_n_t___a_t_t_r_i_b_u_t_e_s.html  group___g_e_n_e_r_a_l.html  group___m_a_r_k_e_r_s___a_n_d___r_a_n_g_e_s.html  group___r_e_s_o_u_r_c_e___n_a_m_i_n_g.html  group___s_t_r_i_n_g___r_e_g_i_s_t_r_a_t_i_o_n.html  group___s_y_n_c_h_r_o_n_i_z_a_t_i_o_n.html  index.html  menudata.js  nv_tools_ext_8h.html  nv_tools_ext_8h__dep__incl.map  nv_tools_ext_8h__dep__incl.md5  nv_tools_ext_8h_source.html  nv_tools_ext_cuda_8h_source.html  nv_tools_ext_cuda_rt_8h_source.html  nv_tools_ext_open_c_l_8h_source.html  nv_tools_ext_sync_8h_source.html  structnvtx_event_attributes__v2.html  structnvtx_resource_attributes__v0.html  structnvtx_sync_user_attributes__v0.html  topics.html  unionnvtx_event_attributes__v2_1_1payload__t.html  unionnvtx_message_value__t.html  unionnvtx_resource_attributes__v0_1_1identifier__t.html
docs/doxygen-cpp/: classnvtx3_1_1v1_1_1category.html  classnvtx3_1_1v1_1_1color.html  classnvtx3_1_1v1_1_1domain.html  classnvtx3_1_1v1_1_1event__attributes.html  classnvtx3_1_1v1_1_1message.html  classnvtx3_1_1v1_1_1named__category__in.html  classnvtx3_1_1v1_1_1payload.html  classnvtx3_1_1v1_1_1registered__string__in.html  classnvtx3_1_1v1_1_1scoped__range__in.html  classnvtx3_1_1v1_1_1unique__range__in.html  index.html  nvtx3_8hpp.html  nvtx3_8hpp_source.html  structnvtx3_1_1v1_1_1argb.html  structnvtx3_1_1v1_1_1domain_1_1global.html  structnvtx3_1_1v1_1_1range__handle.html  structnvtx3_1_1v1_1_1rgb.html
docs/doxygen/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  groups_6.js  searchdata.js  variables_2.js  variables_4.js
python/: pyproject.toml  setup.py
python/tools/: build-wheels.sh
tools/docs/: generate-readme.py
